W-16569246: [FIPS] HTTP connector assesment