@@ -28,6 +28,7 @@
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/sun.security.provider=ALL-UNNAMED
         </surefire.args>
 
         <maven.dependency.plugin.version>3.8.0</maven.dependency.plugin.version>
@@ -239,6 +240,61 @@
                     <scope>provided</scope>
                 </dependency>
             </dependencies>
+        </profile>
+        <profile>
+            <id>fips</id>
+            <activation>
+                <!-- Profile for validating fips -->
+                <property>
+                    <name>fips</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration>
+                            <systemProperties>
+                                <property>
+                                    <name>javax.net.ssl.trustStoreType</name>
+                                    <value>bcfks</value>
+                                </property>
+                                <property>
+                                    <name>javax.net.ssl.trustStore</name>
+                                    <value>../cacertsFips</value>
+                                </property>
+                                <property>
+                                    <name>javax.net.ssl.trustStorePassword</name>
+                                    <value>changeit</value>
+                                </property>
+                                <property>
+                                    <name>javax.net.ssl.keyStoreType</name>
+                                    <value>bcfks</value>
+                                </property>
+                                <property>
+                                    <name>aether.checksums.algorithms</name>
+                                    <value>SHA-256,SHA-512</value>
+                                </property>
+                                <property>
+                                    <name>aether.layout.maven2.checksumAlgorithms</name>
+                                    <value>SHA-256,SHA-512</value>
+                                </property>
+                                <property>
+                                    <name>mule.fips.testing</name>
+                                    <value>true</value>
+                                </property>
+                                <property>
+                                    <name>maven.projectVersion</name>
+                                    <value>${mule.version}</value>
+                                </property>
+                            </systemProperties>
+                            <jvm>${fips.java}</jvm>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
